[package]
name = "wonder15"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { version = "0.15", features = ["trace"]}
# tracy-client = "0.18"
# tracy-client-sys = "0.24"
bevy = {version = "0.15.3"}

ulam = "0.6"
rand = "0.8"
async-channel = "2.1"
bevy_ecs_tilemap = "0.15.0"
# thiserror = "2.0"
# ldtk_rust = { version = "0.6" }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4"
serde_json = { version = "1.0.138" }
serde = { version = "1.0.217", features = ["derive"] }
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "HtmlCanvasElement",
    "Clipboard",
    "Window",
    "Navigator",
    "Permissions",
    'CustomEvent',
    'CustomEventInit',
    #"UserActivation",
] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

# [patch.crates-io]
# tracy-client = { git = "https://github.com/nagisa/rust_tracy_client", tag = "tracy-client-v0.18.0" }


[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
